[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/music/Gameplay demo 2.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/music/Gameplay tortuga demo.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/music/Persecucion serpiente demo.wav" type="AudioStream" id=3]
[ext_resource path="res://MusicHandler.gd" type="Script" id=4]

[node name="MusicHandler" type="Node" groups=[
"music_handler",
]]
script = ExtResource( 4 )

[node name="SnakesStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -80.0
autoplay = true

[node name="GameplayStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -5.0
autoplay = true

[node name="TortoiseStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]
